--- a/main/index.html
+++ b/main/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hyper Drift</title>
 </head>
@@ -9,8 +11,15 @@
 
     <div class="intro">
         <h1 class="logo-header">
-            <span class="logo">Lo</span><span class="logo">go.</span>
+            <span class="logo">Hyper</span><span class="logo">Drift</span>
         </h1>
     </div>
+
+    <header>
+        <h4>Logo.</h4>
+    </header>
+
+    <script src="app.js"></script>
+
 </body>
 </html>
