--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="intro">
+    <div class="text">
         <h1 class="logo-header">
             <span class="logo">Hyper</span><span class="logo">Drift</span>
         </h1>
@@ -18,8 +18,6 @@
     <header>
         <h4>Logo.</h4>
     </header>
-
-    <script src="app.js"></script>
 
 </body>
 </html>
