--- a/main/index.html
+++ b/main/index.html
@@ -1,23 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hyper Drift</title>
+  <!-- Compatibility -->
+  <meta charset="UTF-8">
+  <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport">
+  <meta content="#87304e" name="theme-color">
+  <!-- Metadata -->
+  <meta content="Just a small Discord server." name="description">
+  <meta content="nevion, moosky, themooskyfish, coldarchie, archie" name="keywords">
+  <meta content="https://nevion.xyz" property="og:url">
+  <meta content="Just a small Discord server." property="og:description">
+  <meta content="https://nevion.xyz/img/favicon.png" property="og:image">
+  <meta content="summary" name="twitter:card">
+  <meta content="Nevion" name="twitter:title">
+  <meta content="Just a small Discord server." name="twitter:description">
+  <meta content="https://nevion.xyz/img/favicon.png" name="twitter:image">
+  <!-- Site Resources -->
+  <link rel="shortcut icon" href="img/favicon.png">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet" type="text/css">
+  <link href="css/main.css" rel="stylesheet" type="text/css">
+  <link href="css/scroll.css" rel="stylesheet" type="text/css">
+  <link href="css/staff.css" rel="stylesheet" type="text/css">
+  <title>Nevion</title>
 </head>
+
 <body>
 
-    <div class="text">
-        <h1 class="logo-header">
-            <span class="logo">Hyper</span><span class="logo">Drift</span>
-        </h1>
+  <section class="hero header">
+    <div class="hero-body">
+      <div class="container has-text-centered">
+        <img src="img/logo.png" class="animated fadeInDown faster logo" alt="logo">
+      </div>
+      <div class="animated fadeInUp faster has-text-centered">
+        <h2 class="has-text-white is-size-2">Nevion</h2>
+        <div class="field has-addons has-addons-centered">
+          <p class="control">
+            <a class="button is-normal is-rounded is-dark" href="https://discordapp.com/invite/aPJJS4S">
+              <span class="icon is-small">
+                <i class="fab fa-discord"></i>
+              </span>
+              <span class="invite">Discord</span>
+            </a>
+          </p>
+          <p class="control">
+            <a class="button is-normal is-rounded is-dark" href="https://twitter.com/nevion_discord/">
+              <span class="icon is-small">
+                <i class="fab fa-twitter"></i>
+              </span>
+              <span class="commands">Twitter</span>
+            </a>
+          </p>
+        </div>
+      </div>
     </div>
+  </section>
 
-    <header>
-        <h4>Logo.</h4>
-    </header>
+  <section class="has-text-centered animated fadeIn fast">
+    <br>
+    <div class="container">
+      <div class="box">
+        <p class="is-size-2">Staff</p><br>
+        <div class="columns">
+          <div class="column">
+            <a href="https://twitter.com/themooskyfish" target="_blank">
+              <img src="img/staff/moosky.png" class="staff ceo" alt="moosky">
+            </a>
+            <p>TheMooskyFish</p>
+            <div class="tag is-ceo is-rounded">
+              <p>CEO</p>
+            </div>
+          </div>
+          <div class="column">
+            <a href="https://coldarchie.me" target="_blank">
+              <img src="img/staff/archie.jpg" class="staff manager" alt="archie">
+            </a>
+            <p>coldarchie</p>
+            <div class="tag is-manager is-rounded">
+              <p>Manager</p>
+            </div>
+          </div>
+          <div class="column">
+            <a href="https://twitter.com/_ameeyx" target="_blank">
+              <img src="img/staff/amy.jpg" class="staff manager" alt="amy">
+            </a>
+            <p>amy</p>
+            <div class="tag is-manager is-rounded">
+              <p>Manager</p>
+            </div>
+          </div>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <a href="https://twitter.com/Chiibiki" target="_blank">
+              <img src="img/staff/tishy.png" class="staff co-manager" alt="tishy">
+            </a>
+            <p>Chi</p>
+            <div class="tag is-co-manager is-rounded">
+              <p>Co-Manager</p>
+            </div>
+          </div>
+          <div class="column">
+            <a href="https://espi.xyz/" target="_blank">
+              <img src="img/staff/espi.png" class="staff supervisor" alt="espi">
+            </a>
+            <p>smolespi</p>
+            <div class="tag is-supervisor is-rounded">
+              <p>Supervisor</p>
+            </div>
+          </div>
+          <div class="column">
+            <a href="https://twitter.com/_shoko64" target="_blank">
+              <img src="img/staff/shoko.png" class="staff administrator" alt="shoko">
+            </a>
+            <p>shoko</p>
+            <div class="tag is-administrator is-rounded">
+              <p>Administrator</p>
+            </div>
+          </div>
+        </div>
+        <div class="columns">
+          <div class="column">
+            <a href="https://twitter.com/sh1baa" target="_blank">
+              <img src="img/staff/sh1ba.png" class="staff moderator" alt="sh1ba">
+            </a>
+            <p>shiba</p>
+            <div class="tag is-moderator is-rounded">
+              <p>Moderator</p>
+            </div>
+          </div>
+          <div class="column">
+            <a href="https://twitter.com/Squeezys_Home" target="_blank">
+              <img src="img/staff/squeezy.png" class="staff moderator" alt="squeezy">
+            </a>
+            <p>Squeezy</p>
+            <div class="tag is-moderator is-rounded">
+              <p>Moderator</p>
+            </div>
+          </div>
+          <div class="column">
+            <a href="https://twitter.com/_notLeM" target="_blank">
+              <img src="img/staff/lem.png" class="staff moderator" alt="lem">
+            </a>
+            <p>notLeM</p>
+            <div class="tag is-moderator is-rounded">
+              <p>Moderator</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <br>
+  </section>
+
+  <footer class="footer has-text-centered">
+    <p class="is-size-6">Made with <i class="fas fa-heart"></i> using <a href="https://bulma.io" class="linky has-text-white">Bulma</a>.</p>
+    <p class="is-size-6">Site by <a href="https://espi.xyz" class="linky">smolespi</a> &amp; <a href="https://coldarchie.me" class="linky">coldarchie</a>.</p>
+  </footer>
+
 
 </body>
+
 </html>
