--- a/main/index.html
+++ b/main/index.html
@@ -7,25 +7,25 @@
   <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport">
   <meta content="#87304e" name="theme-color">
   <!-- Metadata -->
-  <meta content="Just a small Discord server." name="description">
-  <meta content="nevion, moosky, themooskyfish, coldarchie, archie" name="keywords">
-  <meta content="https://nevion.xyz" property="og:url">
+  <meta content="CarX Drift Team" name="description">
+  <meta content="CarX Drift Team Game Technologies Mods" name="keywords">
+  <meta content="https://hyperdrift.pro" property="og:url">
   <meta content="Just a small Discord server." property="og:description">
-  <meta content="https://nevion.xyz/img/favicon.png" property="og:image">
+  <meta content="https://hyperdrift.pro/img/favicon.png" property="og:image">
   <meta content="summary" name="twitter:card">
   <meta content="Nevion" name="twitter:title">
   <meta content="Just a small Discord server." name="twitter:description">
-  <meta content="https://nevion.xyz/img/favicon.png" name="twitter:image">
+  <meta content="https://hyperdrift.pro/img/favicon.png" name="twitter:image">
   <!-- Site Resources -->
   <link rel="shortcut icon" href="img/favicon.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&family=Patua+One&display=swap" rel="stylesheet">
   <link href="css/animate.css" rel="stylesheet" type="text/css">
   <link href="css/main.css" rel="stylesheet" type="text/css">
   <link href="css/scroll.css" rel="stylesheet" type="text/css">
   <link href="css/staff.css" rel="stylesheet" type="text/css">
-  <title>Nevion</title>
+  <title>Hyper Drift</title>
 </head>
 
 <body>
@@ -36,10 +36,10 @@
         <img src="img/logo.png" class="animated fadeInDown faster logo" alt="logo">
       </div>
       <div class="animated fadeInUp faster has-text-centered">
-        <h2 class="has-text-white is-size-2">Nevion</h2>
+        <h2 class="has-text-white is-size-2">Hyper Drift</h2>
         <div class="field has-addons has-addons-centered">
           <p class="control">
-            <a class="button is-normal is-rounded is-dark" href="https://discordapp.com/invite/aPJJS4S">
+            <a class="button is-normal is-rounded is-dark" href="https://discord.io/HyperDrift">
               <span class="icon is-small">
                 <i class="fab fa-discord"></i>
               </span>
@@ -47,7 +47,7 @@
             </a>
           </p>
           <p class="control">
-            <a class="button is-normal is-rounded is-dark" href="https://twitter.com/nevion_discord/">
+            <a class="button is-normal is-rounded is-dark" href="https://twitter.com/hyper_drift/">
               <span class="icon is-small">
                 <i class="fab fa-twitter"></i>
               </span>
@@ -87,67 +87,6 @@
             <a href="https://twitter.com/_ameeyx" target="_blank">
               <img src="img/staff/amy.jpg" class="staff manager" alt="amy">
             </a>
-            <p>amy</p>
-            <div class="tag is-manager is-rounded">
-              <p>Manager</p>
-            </div>
-          </div>
-        </div>
-        <div class="columns">
-          <div class="column">
-            <a href="https://twitter.com/Chiibiki" target="_blank">
-              <img src="img/staff/tishy.png" class="staff co-manager" alt="tishy">
-            </a>
-            <p>Chi</p>
-            <div class="tag is-co-manager is-rounded">
-              <p>Co-Manager</p>
-            </div>
-          </div>
-          <div class="column">
-            <a href="https://espi.xyz/" target="_blank">
-              <img src="img/staff/espi.png" class="staff supervisor" alt="espi">
-            </a>
-            <p>smolespi</p>
-            <div class="tag is-supervisor is-rounded">
-              <p>Supervisor</p>
-            </div>
-          </div>
-          <div class="column">
-            <a href="https://twitter.com/_shoko64" target="_blank">
-              <img src="img/staff/shoko.png" class="staff administrator" alt="shoko">
-            </a>
-            <p>shoko</p>
-            <div class="tag is-administrator is-rounded">
-              <p>Administrator</p>
-            </div>
-          </div>
-        </div>
-        <div class="columns">
-          <div class="column">
-            <a href="https://twitter.com/sh1baa" target="_blank">
-              <img src="img/staff/sh1ba.png" class="staff moderator" alt="sh1ba">
-            </a>
-            <p>shiba</p>
-            <div class="tag is-moderator is-rounded">
-              <p>Moderator</p>
-            </div>
-          </div>
-          <div class="column">
-            <a href="https://twitter.com/Squeezys_Home" target="_blank">
-              <img src="img/staff/squeezy.png" class="staff moderator" alt="squeezy">
-            </a>
-            <p>Squeezy</p>
-            <div class="tag is-moderator is-rounded">
-              <p>Moderator</p>
-            </div>
-          </div>
-          <div class="column">
-            <a href="https://twitter.com/_notLeM" target="_blank">
-              <img src="img/staff/lem.png" class="staff moderator" alt="lem">
-            </a>
-            <p>notLeM</p>
-            <div class="tag is-moderator is-rounded">
-              <p>Moderator</p>
             </div>
           </div>
         </div>
