--- a/main/index.html
+++ b/main/index.html
@@ -2,104 +2,370 @@
 <html lang="en">
 
 <head>
-  <!-- Compatibility -->
-  <meta charset="UTF-8">
-  <meta content="width=device-width,initial-scale=1,user-scalable=no" name="viewport">
-  <meta content="#87304e" name="theme-color">
-  <!-- Metadata -->
-  <meta content="CarX Drift Team" name="description">
-  <meta content="CarX Drift Team Game Technologies Mods" name="keywords">
-  <meta content="https://hyperdrift.pro" property="og:url">
-  <meta content="Just a small Discord server." property="og:description">
-  <meta content="https://hyperdrift.pro/img/favicon.png" property="og:image">
-  <meta content="summary" name="twitter:card">
-  <meta content="Nevion" name="twitter:title">
-  <meta content="Just a small Discord server." name="twitter:description">
-  <meta content="https://hyperdrift.pro/img/favicon.png" name="twitter:image">
-  <!-- Site Resources -->
-  <link rel="shortcut icon" href="img/favicon.png">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Exo:wght@700&family=Patua+One&display=swap" rel="stylesheet">
-  <link href="css/animate.css" rel="stylesheet" type="text/css">
-  <link href="css/main.css" rel="stylesheet" type="text/css">
-  <link href="css/scroll.css" rel="stylesheet" type="text/css">
-  <link href="css/staff.css" rel="stylesheet" type="text/css">
-  <title>Hyper Drift</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>YourName</title>
+  <meta content="Very extensive web template" name="desc">
+  <meta content="Drywe" name="author">
+
+  <!-- Favicon -->
+  <link href="assets/img/icon.png" rel="icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
+  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
 </head>
 
 <body>
 
-  <section class="hero header">
-    <div class="hero-body">
-      <div class="container has-text-centered">
-        <img src="img/logo.png" class="animated fadeInDown faster logo" alt="logo">
+  <!-- ======= Top Bar ======= -->
+  <section id="topbar" class="d-none d-lg-block">
+    <div class="container d-flex">
+      <div class="contact-info mr-auto">
+        <i class="icofont-envelope"></i><a href="mailto:your@email.eu">your@email.eu</a>
+        <i class="icofont-phone mail-icon"></i> +420123456789
       </div>
-      <div class="animated fadeInUp faster has-text-centered">
-        <h2 class="has-text-white is-size-2">Hyper Drift</h2>
-        <div class="field has-addons has-addons-centered">
-          <p class="control">
-            <a class="button is-normal is-rounded is-dark" href="https://discord.io/HyperDrift">
-              <span class="icon is-small">
-                <i class="fab fa-discord"></i>
-              </span>
-              <span class="invite">Discord</span>
-            </a>
-          </p>
-          <p class="control">
-            <a class="button is-normal is-rounded is-dark" href="https://twitter.com/hyper_drift/">
-              <span class="icon is-small">
-                <i class="fab fa-twitter"></i>
-              </span>
-              <span class="commands">Twitter</span>
-            </a>
-          </p>
-        </div>
+      <div class="social-links">
+        <a href="#" class="twitter"><i class="icofont-twitter"></i></a>
+        <a href="#" class="facebook"><i class="icofont-facebook"></i></a>
+        <a href="#" class="instagram"><i class="icofont-instagram"></i></a>
+        <a href="#" class="skype"><i class="icofont-skype"></i></a>
+        <a href="#" class="linkedin"><i class="icofont-linkedin"></i></i></a>
       </div>
     </div>
   </section>
 
-  <section class="has-text-centered animated fadeIn fast">
-    <br>
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex align-items-center">
+
+      <div class="logo mr-auto">
+        <h1 class="text-light"><a href="index.html">Your<span>Name</span></a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      </div>
+
+      <nav class="nav-menu d-none d-lg-block">
+        <ul>
+          <li class="active"><a href="#header">Home</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#team">Our Team</a></li>
+          <li><a href="example.html">Example</a></li>
+          <li class="drop-down"><a href="">Dropdown</a>
+            <ul>
+                <ul>
+                </ul>
+              </li>
+              <li><a href="#">Test Link 1</a></li>
+              <li><a href="#">Test Link 2</a></li>
+              <li><a href="#">Test Link 3</a></li>
+            </ul>
+          </li>
+
+        </ul>
+      </nav><!-- .nav-menu -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <!-- ======= Hero Section ======= -->
+  <section id="hero">
+    <div class="hero-container">
+      <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+
+        <ol class="carousel-indicators" id="hero-carousel-indicators"></ol>
+
+        <div class="carousel-inner" role="listbox">
+
+          <!-- Slide 1 -->
+          <div class="carousel-item active" style="background-image: url(assets/img/slide/1.png);">
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2 class="animate__animated animate__fadeInDown">Your slogan here, <span>YourName</span></h2>
+                <p class="animate__animated animate__fadeInUp">Desc</p>
+                <a href="#ex" class="btn-get-started scrollto animate__animated animate__fadeInUp">Click!</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Slide 2 -->
+          <div class="carousel-item" style="background-image: url(assets/img/slide/2.jpg);">
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2 class="animate__animated animate__fadeInDown">Next slogan here!</h2>
+                <p class="animate__animated animate__fadeInUp">Desc</p>
+                <a href="#ex" class="btn-get-started scrollto animate__animated animate__fadeInUp">Click</a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Slide 3 -->
+          <div class="carousel-item" style="background-image: url(assets/img/slide/3-new.png);">
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2 class="animate__animated animate__fadeInDown">Another slogan here!</h2>
+                <p class="animate__animated animate__adeInUp">Desc</p>
+                <a href="#ex" class="btn-get-started scrollto animate__animated animate__fadeInUp">Click!</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <a class="carousel-control-prev" href="#heroCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon ri-arrow-left-line" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+
+        <a class="carousel-control-next" href="#heroCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon ri-arrow-right-line" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
+      </div>
+    </div>
+  </section><!-- End Hero -->
+
+  <main id="main">
+    <!-- ======= Services Section ======= -->
+    <section id="services" class="services section-bg">
+      <div class="container">
+
+        <div class="section-title">
+          <span>WHAT CAN WE OFFER?</span>
+          <h2>What can we offer?</h2>
+          <p>See what we can offer!</p>
+        </div>
+
+        <div class="row">
+          <div class="col-md-6">
+            <div class="icon-box">
+              <i class="icofont-computer"></i>
+              <h4><a href="#">Example 1</h4>
+              <p>Your desc. here</p>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-chart-bar-graph"></i>
+              <h4><a href="#">Example 2</a></h4>
+              <p>Your desc. here</p>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-image"></i>
+              <h4><a href="#">Example 3</a></h4>
+              <p>Your desc. here</p>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-settings"></i>
+              <h4><a href="#">Example 4</a></h4>
+              <p>Your desc. here</p>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-earth"></i>
+              <h4><a href="#">Example 5</a></h4>
+              <p>Your desc. here</p>
+            </div>
+          </div>
+          <div class="col-md-6 mt-4 mt-md-0">
+            <div class="icon-box">
+              <i class="icofont-tasks-alt"></i>
+              <h4><a href="#">Example 6</a></h4>
+              <p>Your desc. here</p>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Services Section -->
+
+    <!-- ======= Team Section ======= -->
+    <section id="team" class="team">
+      <div class="container">
+
+        <div class="section-title">
+          <span>OUR TEAM</span>
+          <h2>Our team</h2>
+          <p>See who is a member of our team!</p>
+        </div>
+
+        <div class="row">
+
+          <div class="col-lg-6">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/Skin1.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Example | Rank </h4>
+                <span>A simple summary of the activities of this team member.</span>
+                <p>text</p>
+                <div class="social">
+                  <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a>
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/Skin1.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Example | Rank </h4>
+                <span>A simple summary of the activities of this team member.</span>
+                <p>text</p>
+                <div class="social">
+                  <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a>
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/Skin1.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Example | Rank </h4>
+                <span>A simple summary of the activities of this team member.</span>
+                <p>text</p>
+                <div class="social">
+                  <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a>
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/Skin1.png" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>Example | Rank </h4>
+                <span>A simple summary of the activities of this team member.</span>
+                <p>text</p>
+                <div class="social">
+                  <a href=""><i class="ri-twitter-fill"></i></a>
+                  <a href=""><i class="ri-facebook-fill"></i></a>
+                  <a href=""><i class="ri-instagram-fill"></i></a>
+                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End Team Section -->
+
+ 
+
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container">
+        <div class="row">
+
+          <div class="col-lg-3 col-md-6">
+            <div class="footer-info">
+              <h3>YourName.eu</h3>
+              <p>
+                Praha 1, PRAGA <br>
+                100 00, Czech Republic<br><br>
+                <strong>TeamSpeak:</strong> ts.yourname.eu<br>
+                <strong>Email:</strong> your@email.eu<br>
+              </p>
+              <div class="social-links mt-3">
+                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-2 col-md-6 footer-links">
+            <h4>Interesting links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Link 1</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Link 2</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Link 3</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-3 col-md-6 footer-links">
+            <h4>Another interesting links</h4>
+            <ul>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Link 1</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Link 2</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Link 3</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-4 col-md-6 footer-newsletter">
+            <h4>Our news</h4>
+            <p>Get news from our website sent to you by e-mail!</p>
+            <form action="" method="post">
+              <input type="email" name="email"><input type="submit" value="Subscribe">
+            </form>
+
+          </div>
+
+        </div>
+      </div>
+    </div>
+
     <div class="container">
-      <div class="box">
-        <p class="is-size-2">Staff</p><br>
-        <div class="columns">
-          <div class="column">
-            <a href="https://twitter.com/themooskyfish" target="_blank">
-              <img src="img/staff/moosky.png" class="staff ceo" alt="moosky">
-            </a>
-            <p>TheMooskyFish</p>
-            <div class="tag is-ceo is-rounded">
-              <p>CEO</p>
-            </div>
-          </div>
-          <div class="column">
-            <a href="https://coldarchie.me" target="_blank">
-              <img src="img/staff/archie.jpg" class="staff manager" alt="archie">
-            </a>
-            <p>coldarchie</p>
-            <div class="tag is-manager is-rounded">
-              <p>Manager</p>
-            </div>
-          </div>
-          <div class="column">
-            <a href="https://twitter.com/_ameeyx" target="_blank">
-              <img src="img/staff/amy.jpg" class="staff manager" alt="amy">
-            </a>
-            </div>
-          </div>
-        </div>
+      <div class="copyright">
+        &copy; 2020 <strong><span>YourName.eu</span></strong>. All Rights Reserved<br>
+		          Created by <strong><span><a href="https://drywe.eu/" target="_blank">Drywe</a></span></strong>.
+      </div>
+      <div class="credits">
       </div>
     </div>
-    <br>
-  </section>
+  </footer><!-- End Footer -->
 
-  <footer class="footer has-text-centered">
-    <p class="is-size-6">Made with <i class="fas fa-heart"></i> using <a href="https://bulma.io" class="linky has-text-white">Bulma</a>.</p>
-    <p class="is-size-6">Site by <a href="https://espi.xyz" class="linky">smolespi</a> &amp; <a href="https://coldarchie.me" class="linky">coldarchie</a>.</p>
-  </footer>
+  <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/jquery-sticky/jquery.sticky.js"></script>
+  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="assets/vendor/counterup/counterup.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/venobox/venobox.min.js"></script>
+  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
 
 </body>
 
